# seqprint

./: .gitignore  6月银行导入模板分类清单.xlsx  README.md  batchprint_gui.py  opencode.jsonc  pyproject.toml  requirements.txt  run_batch_print.ps1  summary_config.json  test_integration.py  validation_config.json  重复报盘检测逻辑.md
.omo/drafts/: column-fingerprint-method.md  header-merge-rules.md  payroll2feishu-validation-methods.md  print-adjustments.md  salary-header-analysis.md  seqprint-payroll-validation.md  virtual-header-generation.md  weekly-report-20260706.md
.omo/plans/: batch-print-program.md  fix-merge-column-mapping.md
template/: 代发业务导入模板.xlsx  映射规则.xlsx
