[project]
name = "batch-print"
version = "1.0.0"
description = "批量银行报盘合并与工资表打印工具"
requires-python = ">=3.10"
dependencies = [
    "xlrd>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "Pillow>=10.0.0",
]

[project.scripts]
batch-print = "batchprint_gui:main"

[dependency-groups]
dev = []

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true